Still trying to fix spacing. Tweaks to Home after I broke spacing in logo-container when making adjustments on game page.

--- a/src/index.css
+++ b/src/index.css
@@ -30,7 +30,6 @@ body, html {
   flex-direction: column;
   align-items: center;
   padding: 20px;
-  gap: 100px;
 }
 
 .header-container-home, .header-container-game {
